[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "etcher"
version = "0.1.0"
description = "Redis-backed persistent Python dict/list containers (RD/RL) with automatic backreferences and cleanup using redislite."
readme = { text = "Etcher provides Redis-backed dict/list containers (RD/RL) with backreferences, reference-counting, transactions, and persistence using redislite.", content-type = "text/markdown" }
requires-python = ">=3.8"
dependencies = [
    "redislite>=6.2.806324",
    "redis>=4.0.0",
    "ulid-py>=1.1.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["etcher*"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Deprecated call to `pkg_resources.declare_namespace\\('google'\\)`:DeprecationWarning:pkg_resources",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-benchmark>=4.0.0",
    "pytest-mock>=3.14.0",
    "anyio>=4.0.0",
    "flake8>=7.0.0"
]
